Corrected alignments

--- a/styles.css
+++ b/styles.css
@@ -79,11 +79,11 @@ footer a:hover, a:active{
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 900px) {
     header, nav {
-        width: 100%;
         float: left;
       }
 
       header {
+        width: 90%;
         font-size: 2.5em;
       }
 
@@ -101,7 +101,7 @@ footer a:hover, a:active{
       }
 
       picture {
-        width: 100%;
-        padding: 20px 0 0;
+        width: 90%;
+        margin: 20px 5% 0;
       }
 }
